--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fd1c60f98e112b4c82639d60cf82ae47&libraries=services,clusterer"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=12960e8f1d627ea898d565f3b8ab8afb"
     ></script>
     <script
       defer
